<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_english_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="84dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/irradiation_time"
                android:textColor="@color/color_DCD08B" />

            <TextView
                android:id="@+id/tv_irradiation_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_DCD08B" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="14dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="4dp"
            android:background="@color/color_DCD08B" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="84dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/wavelength_peak"
                android:textColor="@color/color_DCD08B" />

            <TextView
                android:id="@+id/tv_wavelength_peak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_DCD08B" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="14dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="4dp"
            android:background="@color/color_DCD08B" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="84dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/purity"
                android:textColor="@color/color_DCD08B" />

            <TextView
                android:id="@+id/tv_purity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_DCD08B" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="14dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="4dp"
            android:background="@color/color_DCD08B" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="84dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sp_ratio"
                android:textColor="@color/color_DCD08B" />

            <TextView
                android:id="@+id/tv_sp_ratio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_DCD08B" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="14dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="4dp"
            android:background="@color/color_DCD08B" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="84dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/gai"
                android:textColor="@color/color_DCD08B" />

            <TextView
                android:id="@+id/tv_gai"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_DCD08B" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="14dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="4dp"
            android:background="@color/color_DCD08B" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="84dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ppft"
                android:textColor="@color/color_DCD08B" />

            <TextView
                android:id="@+id/tv_ppft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_DCD08B" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="14dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="4dp"
            android:background="@color/color_DCD08B" />
    </LinearLayout>


</RelativeLayout>